# DungeonBreathEngine

./: .gitattributes  .gitignore  CMakeLists.txt  DungeonBreath.cbp  DungeonBreath.depend  DungeonBreath.layout  Makefile  README.md  ZeldaClone.cbp  ZeldaClone.depend  ZeldaClone.layout  dungeonbreath  imgui.ini  todo.md  todo.txt
GameData/: config.txt
GameData/lang/: eng.txt  jp.txt  pirate.txt  supported.txt
GameData/levels/: demo.txt  entry.txt  index.txt  test.txt  two.txt
GameData/scripts/: file.lua  hero.lua  main.lua  music_list.lua  shapes.lua  strings.lua  ui.lua
GameData/scripts/actors/: enemy.lua  hero.lua  index.txt
GameData/scripts/levels/: entry.lua
GameData/scripts/scenes/: entry.lua  game.lua  (+4 more)
GameData/tilesets/: cave.txt  character.txt  font.txt  hero.txt  index.txt  overworld.txt
docs/: main.tex
headers/: ConfigLoader.h  TextureMap.h
headers/Logger/: ConsoleLogger.h  Logger.h
source/: Actor.cpp  Actor.h  Animation.cpp  Animation.h  Button.cpp  Button.h  ConfigLoader.cpp  ConfigLoader.h  DeviceButton.cpp  Exceptions.h  FontMap.cpp  FontMap.h  GameScene.cpp  GameScene.h  Hero.cpp  Hero.h  MainMenuScene.cpp  MainMenuScene.h  MusicManager.cpp  MusicManager.h  Scene.h  SpriteSet.cpp  TextureMap.cpp  TextureMap.h  Tile.cpp  Tile.h  main.cpp
source/Logger/: ConsoleLogger.cpp  Logger.cpp  Logger.h
src/: Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  Animation.cpp  Animation.h  Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  ConsoleLogger.cpp  ConsoleLogger.h  Container.h  DeviceButton.h  Exceptions.h  FontMap.cpp  FreeText.cpp  FreeText.h  GameScene.cpp  GameScene.h  Hero.cpp  Hero.h  Index.cpp  Input.cpp  Input.h  KeyButton.h  KeyboardScene.cpp  KeyboardScene.h  Label.cpp  Label.h  LevelEditActorSelectScene.h  LevelEditEditScene.cpp  LevelEditEditScene.h  LevelEditNewScene.cpp  LevelEditNewScene.h  LevelEditScene.cpp  LevelEditScene.h  (+52 more)
src/audio/: CMakeLists.txt  MusicManager.cpp  MusicManager.h  SoundMap.cpp  SoundMap.h
src/core/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  ConsoleLogger.cpp  ConsoleLogger.h  Container.cpp  Container.h  DevConsole.cpp  DevConsole.h  DevConsoleLogger.cpp  DevConsoleLogger.h  DeviceButton.cpp  DeviceButton.h  Exceptions.h  Index.cpp  Index.h  Input.cpp  Input.h  Logger.cpp  Logger.h  ResourceMap.h  Script.cpp  Script.h  Stats.cpp  Stats.h  StringProvider.cpp  StringProvider.h
src/imgui/: CMakeLists.txt  imconfig.h
src/imgui-sfml/: CMakeLists.txt
src/lua/: CMakeLists.txt  lua.c
src/play/: Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  CMakeLists.txt  Exceptions.h  Scene.cpp  Scene.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h  WorldManager.cpp  WorldManager.h
src/render/: Animation.cpp  Animation.h  CMakeLists.txt  DynamicTile.cpp  DynamicTile.h  FontMap.cpp  FontMap.h  Macros.h  Particle.cpp  Particle.h  SpriteSet.cpp  SpriteSet.h  StaticTile.cpp  StaticTile.h  TextureMap.cpp  TextureMap.h  Tile.h  TileSet.cpp  TileSet.h
src/scene/: CMakeLists.txt  Game.cpp  Game.h  GameScene.cpp  GameScene.h  Keyboard.cpp  Keyboard.h  KeyboardScene.cpp  KeyboardScene.h  LevelEdit.cpp  LevelEdit.h  LevelEditActorSelect.cpp  LevelEditActorSelect.h  LevelEditActorSelectScene.cpp  LevelEditActorSelectScene.h  LevelEditEdit.cpp  LevelEditEdit.h  LevelEditEditScene.cpp  LevelEditEditScene.h  LevelEditNew.cpp  LevelEditNew.h  LevelEditNewScene.cpp  LevelEditNewScene.h  LevelEditScene.cpp  LevelEditScene.h  LevelEditTile.cpp  LevelEditTile.h  LevelEditTileScene.cpp  LevelEditTileScene.h  MainMenu.cpp  MainMenu.h  MainMenuScene.cpp  MainMenuScene.h  Options.cpp  Options.cpp~  Options.h  OptionsScene.cpp  OptionsScene.h  Scene.cpp  Scene.h  (+12 more)
src/script/: CMakeLists.txt  Container.h  Script.cpp  Script.h  l_audio.cpp  l_audio.h  l_core.cpp  l_core.h  l_imgui.cpp  l_imgui.h  l_play.cpp  l_play.h  l_render.cpp  l_render.h  l_scene.cpp  l_scene.h  l_shape.cpp  l_shape.h  l_ui.cpp  l_ui.h  lua.cpp  lua.h
src/ui/: Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  CMakeLists.txt  Element.cpp  Element.h  KeyButton.cpp  KeyButton.h  Label.cpp  Label.h  Menu.cpp  Menu.h  NumberInput.cpp  NumberInput.h  SpriteButton.cpp  SpriteButton.h  TextButton.cpp  TextButton.h
(+4 files in other folders)
